--- a/index.html
+++ b/index.html
@@ -140,3 +140,12 @@
 
 </body>
 </html>
+addMessage(
+  "You can talk freely here. No pressure. No tests.",
+  "bot"
+);
+addMessage(
+  `Hi ${nickname}. I'm here with you. 
+You can say a word, a sentence, or just hello.`,
+  "bot"
+);
