--- a/landing.html
+++ b/landing.html
@@ -1,3 +1,7 @@
+<p style="text-align:center; font-size:0.85rem; color:#a1a6b0;">
+  Step 1 of 2 · Setup
+</p>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -117,7 +121,7 @@
       <option value="puff" disabled>Puff 🔒 Nice+</option>
     </select>
 
-    <button onclick="startApp()">Start Talking</button>
+    <button onclick="startApp()">Continue to Conversation</button>
 
     <footer>
       <a href="/privacy.html">Privacy</a> •
