--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ button {
 
 <header>
   <h2 id="greeting"></h2>
-  <p id="languageInfo" style="font-size:0.85rem;color:var(--text-muted)"></p>
+<p style="font-size:0.8rem;color:#a1a6b0;">Step 2 of 2 · Conversation</p>
 </header>
 
 <div id="chat"></div>
